[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nldb"
authors = [{name = "Tom Dyson", email = "tom@torchbox.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "openai",
    "fastapi",
    "uvicorn[standard]",
    "tabulate",
    "typer"
]

[project.urls]
Home = "https://github.com/tomdyson/nldb"

[project.scripts]
nldb = "nldb.cli:cli_wrapper"
